--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNc5K5KizN8ZzadRtxdOHvr",
+      "authorship_tag": "ABX9TyOSJQmO7+8TdrJHXCeNbdRa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,11 +54,209 @@
         ")\n",
         "\n",
         "konular = [\n",
-        "\n",
+        "    \"Sistem Gereksinim Analizi\",\n",
+        "    \"Sistem Tasarımı\",\n",
+        "    \"Sistem Mimarisi\",\n",
+        "    \"Sistem Entegrasyonu\",\n",
+        "    \"Sistem Doğrulama ve Geçerleme\",\n",
+        "    \"Risk Yönetimi\",\n",
+        "    \"Yapılandırma Yönetimi\",\n",
+        "    \"Sistem Yaşam Döngüsü\",\n",
+        "    \"Modelleme ve Simülasyon\",\n",
+        "    \"Sistem Güvenilirliği\",\n",
+        "    \"Kalite Yönetimi\",\n",
+        "    \"Proje Yönetimi\",\n",
+        "    \"Sistem Testi\",\n",
+        "    \"İnsan Faktörleri\",\n",
+        "    \"Sistem Güvenliği\",\n",
+        "    \"Bakım ve Destek\",\n",
+        "    \"Sistem Optimizasyonu\",\n",
+        "    \"Sistem Metodolojileri\",\n",
+        "    \"Sistem Standartları\",\n",
+        "    \"Sistem Analizi\",\n",
+        "    \"Sistem Araçları\",\n",
+        "    \"Gereksinim Yönetimi\",\n",
+        "    \"Performans Analizi\",\n",
+        "    \"Maliyet Analizi\",\n",
+        "    \"Sistem Planlaması\",\n",
+        "    \"Sistem Süreçleri\",\n",
+        "    \"Sistem Yönetimi\",\n",
+        "    \"Sistem Eğitimi\",\n",
+        "    \"Sistem Uygulamaları\",\n",
+        "    \"Sistem ve Yazılım Entegrasyonu\",\n",
+        "    \"Sistem ve Donanım Entegrasyonu\",\n",
+        "    \"Ağ Sistemleri\",\n",
+        "    \"Güvenlik Sistemleri\",\n",
+        "    \"Veri Analitiği\",\n",
+        "    \"Yapay Zeka Uygulamaları\",\n",
+        "    \"Makine Öğrenmesi Uygulamaları\",\n",
+        "    \"Siber Güvenlik\",\n",
+        "    \"Bulut Bilişim\",\n",
+        "    \"Nesnelerin İnterneti\",\n",
+        "    \"Büyük Veri Yönetimi\",\n",
+        "    \"Robotik Sistemler\",\n",
+        "    \"Otomasyon Sistemleri\",\n",
+        "    \"Enerji Sistemleri\",\n",
+        "    \"Savunma Sistemleri\",\n",
+        "    \"Uzay Sistemleri\",\n",
+        "    \"Ulaşım Sistemleri\",\n",
+        "    \"Sağlık Sistemleri\",\n",
+        "    \"Telekomünikasyon Sistemleri\",\n",
+        "    \"Endüstri 4.0\",\n",
+        "    \"Akıllı Şebekeler\",\n",
+        "    \"Oyun Sistemleri\",\n",
+        "    \"Otomotiv Sistemleri\",\n",
+        "    \"Havacılık Sistemleri\",\n",
+        "    \"Denizcilik Sistemleri\",\n",
+        "    \"Tarım Teknolojileri\",\n",
+        "    \"Eğitim Teknolojileri\",\n",
+        "    \"Finansal Sistemler\",\n",
+        "    \"Lojistik Sistemleri\",\n",
+        "    \"Üretim Sistemleri\",\n",
+        "    \"Kalite Kontrol Sistemleri\",\n",
+        "    \"Çevresel Sistemler\",\n",
+        "    \"Yenilenebilir Enerji Sistemleri\",\n",
+        "    \"Veri Tabanı Sistemleri\",\n",
+        "    \"E-ticaret Sistemleri\",\n",
+        "    \"Mobil Sistemler\",\n",
+        "    \"Ağ Güvenliği\",\n",
+        "    \"Sensör Ağları\",\n",
+        "    \"Akıllı Ev Sistemleri\",\n",
+        "    \"İnsan-Makine Etkileşimi\",\n",
+        "    \"Veri Görselleştirme\",\n",
+        "    \"İş Süreçleri Yönetimi\",\n",
+        "    \"Bulanık Mantık Uygulamaları\",\n",
+        "    \"Karar Destek Sistemleri\",\n",
+        "    \"Bilgi Yönetimi\",\n",
+        "    \"Ürün Yaşam Döngüsü Yönetimi\",\n",
+        "    \"Çevik Metodolojiler\",\n",
+        "    \"Scrum\",\n",
+        "    \"Kanban\",\n",
+        "    \"Veri Madenciliği\",\n",
+        "    \"Güvenlik Analizi\",\n",
+        "    \"Sistem Dinamiği\",\n",
+        "    \"Süreç İyileştirme\",\n",
+        "    \"İşlevsel Güvenlik\",\n",
+        "    \"Süreç Otomasyonu\",\n",
+        "    \"Standartlar ve Sertifikasyon\",\n",
+        "    \"Etik ve Yasal Düzenlemeler\",\n",
+        "    \"Yenilik Yönetimi\",\n",
+        "    \"Değişim Yönetimi\",\n",
+        "    \"İnovasyon\",\n",
+        "    \"Teknoloji Yönetimi\",\n",
+        "    \"Performans Yönetimi\",\n",
+        "    \"Veri Güvenliği\",\n",
+        "    \"Veri Entegrasyonu\",\n",
+        "    \"Sistem Güvenliği\",\n",
+        "    \"Yazılım Entegrasyonu\",\n",
+        "    \"Donanım Entegrasyonu\",\n",
+        "    \"Sistem Arayüzleri\",\n",
+        "    \"İş Analizi\",\n",
+        "    \"Bilgi Sistemleri\",\n",
+        "    \"Optimizasyon Teknikleri\"\n",
         "]\n",
         "\n",
         "soru_kaliplari = [\n",
-        "\n",
+        "    \"{0} nedir ve nasıl çalışır?\",\n",
+        "    \"{0} nasıl uygulanır?\",\n",
+        "    \"{0} sürecinin adımları nelerdir?\",\n",
+        "    \"{0} sırasında karşılaşılan zorluklar nelerdir?\",\n",
+        "    \"{0} için en iyi uygulamalar nelerdir?\",\n",
+        "    \"{0} neden önemlidir?\",\n",
+        "    \"{0} performansı nasıl ölçülür?\",\n",
+        "    \"{0} nasıl optimize edilir?\",\n",
+        "    \"{0} ve {1} arasındaki farklar nelerdir?\",\n",
+        "    \"{0} ve {1} entegrasyonu nasıl sağlanır?\",\n",
+        "    \"{0} uygulamalarında dikkat edilmesi gerekenler nelerdir?\",\n",
+        "    \"{0} kullanmanın avantajları ve dezavantajları nelerdir?\",\n",
+        "    \"{0} gelecekte nasıl evrilecektir?\",\n",
+        "    \"{0} için hangi araçlar kullanılabilir?\",\n",
+        "    \"{0} projelerinde risk yönetimi nasıl yapılır?\",\n",
+        "    \"{0} ile ilgili güncel trendler nelerdir?\",\n",
+        "    \"{0} sırasında hangi metrikler izlenir?\",\n",
+        "    \"{0} süreçlerinde kalite nasıl sağlanır?\",\n",
+        "    \"{0} güvenliği nasıl sağlanır?\",\n",
+        "    \"{0} uygulamalarında karşılaşılan sorunlar ve çözümleri nelerdir?\",\n",
+        "    \"{0} maliyetleri nasıl azaltılır?\",\n",
+        "    \"{0} süreçlerinde hangi standartlar kullanılır?\",\n",
+        "    \"{0} için hangi eğitimler gereklidir?\",\n",
+        "    \"{0} konusunda uzmanlaşmak için neler yapılmalıdır?\",\n",
+        "    \"{0} projelerinde takım çalışması nasıl organize edilir?\",\n",
+        "    \"{0} ve {1} arasındaki ilişki nedir?\",\n",
+        "    \"{0} için hangi test yöntemleri kullanılır?\",\n",
+        "    \"{0} projelerinde başarının anahtar faktörleri nelerdir?\",\n",
+        "    \"{0} nasıl belgelendirilir?\",\n",
+        "    \"{0} uygulamalarında etik konular nelerdir?\",\n",
+        "    \"{0} verimliliği nasıl artırılır?\",\n",
+        "    \"{0} projelerinde başarısızlık nedenleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde hangi metodolojiler kullanılır?\",\n",
+        "    \"{0} süreçlerinde iletişim nasıl yönetilir?\",\n",
+        "    \"{0} ve {1} birlikte nasıl kullanılır?\",\n",
+        "    \"{0} için hangi yazılım araçları önerilir?\",\n",
+        "    \"{0} uygulamalarında en sık yapılan hatalar nelerdir?\",\n",
+        "    \"{0} süreçlerinde insan faktörü nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde maliyet-fayda analizi nasıl yapılır?\",\n",
+        "    \"{0} ve {1} entegrasyonunda hangi zorluklar vardır?\",\n",
+        "    \"{0} uygulamalarında hangi veri türleri kullanılır?\",\n",
+        "    \"{0} süreçlerinde veri güvenliği nasıl sağlanır?\",\n",
+        "    \"{0} ve {1} arasındaki sinerji nasıl oluşturulur?\",\n",
+        "    \"{0} projelerinde zaman yönetimi nasıl yapılır?\",\n",
+        "    \"{0} için hangi sertifikasyon programları mevcuttur?\",\n",
+        "    \"{0} süreçlerinde değişim yönetimi nasıl uygulanır?\",\n",
+        "    \"{0} uygulamalarında müşteri gereksinimleri nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde başarının ölçütleri nelerdir?\",\n",
+        "    \"{0} ve {1} teknolojileri nasıl bir arada kullanılabilir?\",\n",
+        "    \"{0} için gelecekteki teknolojik trendler nelerdir?\",\n",
+        "    \"{0} uygulamalarında hangi güvenlik önlemleri alınmalıdır?\",\n",
+        "    \"{0} süreçlerinde belgelendirme neden önemlidir?\",\n",
+        "    \"{0} projelerinde paydaş yönetimi nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında sürdürülebilirlik nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde sürekli iyileştirme nasıl yapılır?\",\n",
+        "    \"{0} için hangi simülasyon araçları kullanılabilir?\",\n",
+        "    \"{0} projelerinde kaynak yönetimi nasıl optimize edilir?\",\n",
+        "    \"{0} ve {1} entegrasyonunun faydaları nelerdir?\",\n",
+        "    \"{0} süreçlerinde hangi metrikler izlenmelidir?\",\n",
+        "    \"{0} uygulamalarında inovasyon nasıl teşvik edilir?\",\n",
+        "    \"{0} projelerinde risk azaltma stratejileri nelerdir?\",\n",
+        "    \"{0} süreçlerinde kalite kontrol nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında büyük veri nasıl kullanılır?\",\n",
+        "    \"{0} projelerinde iletişim planlaması nasıl yapılır?\",\n",
+        "    \"{0} süreçlerinde karar verme nasıl optimize edilir?\",\n",
+        "    \"{0} ve {1} teknolojilerinin birleşimi hangi yeni imkanlar sunar?\",\n",
+        "    \"{0} uygulamalarında yapay zeka nasıl entegre edilir?\",\n",
+        "    \"{0} süreçlerinde uyumluluk nasıl sağlanır?\",\n",
+        "    \"{0} projelerinde tedarik zinciri yönetimi nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında kullanıcı deneyimi nasıl iyileştirilir?\",\n",
+        "    \"{0} süreçlerinde süreç iyileştirme nasıl yapılır?\",\n",
+        "    \"{0} projelerinde stratejik planlama nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında veri analitiği nasıl kullanılır?\",\n",
+        "    \"{0} süreçlerinde liderlik nasıl rol oynar?\",\n",
+        "    \"{0} projelerinde inovasyon stratejileri nelerdir?\",\n",
+        "    \"{0} ve {1} teknolojilerinin gelecekteki rolü nedir?\",\n",
+        "    \"{0} uygulamalarında siber güvenlik nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde esneklik nasıl artırılır?\",\n",
+        "    \"{0} projelerinde kültürel faktörler nasıl yönetilir?\",\n",
+        "    \"{0} uygulamalarında blok zinciri teknolojisi nasıl kullanılır?\",\n",
+        "    \"{0} süreçlerinde belirsizlik nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde çevik yönetim yaklaşımları nasıl uygulanır?\",\n",
+        "    \"{0} uygulamalarında makine öğrenmesi nasıl entegre edilir?\",\n",
+        "    \"{0} süreçlerinde süreç analizi nasıl yapılır?\",\n",
+        "    \"{0} projelerinde etik ve yasal sorumluluklar nelerdir?\",\n",
+        "    \"{0} uygulamalarında kullanıcı geri bildirimleri nasıl değerlendirilir?\",\n",
+        "    \"{0} süreçlerinde standardizasyon neden önemlidir?\",\n",
+        "    \"{0} projelerinde performans ölçütleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında bulut teknolojileri nasıl kullanılır?\",\n",
+        "    \"{0} süreçlerinde kalite iyileştirme nasıl sağlanır?\",\n",
+        "    \"{0} projelerinde teknoloji seçimi nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında robotik süreç otomasyonu nasıl entegre edilir?\",\n",
+        "    \"{0} süreçlerinde insan kaynakları yönetimi nasıl yapılır?\",\n",
+        "    \"{0} projelerinde yenilik yönetimi nasıl uygulanır?\",\n",
+        "    \"{0} uygulamalarında nesnelerin interneti nasıl kullanılır?\",\n",
+        "    \"{0} süreçlerinde verimlilik nasıl artırılır?\",\n",
+        "    \"{0} projelerinde uluslararası standartlar nasıl uygulanır?\",\n",
+        "    \"{0} uygulamalarında veri gizliliği nasıl korunur?\",\n",
+        "    \"{0} süreçlerinde tedarikçi ilişkileri nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde zaman ve maliyet tahminleri nasıl yapılır?\"\n",
         "]\n",
         "\n",
         "\n",
