--- a/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
+++ b/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
@@ -91,7 +91,7 @@
         "] # More models at https://huggingface.co/unsloth\n",
         "\n",
         "model, tokenizer = FastLanguageModel.from_pretrained(\n",
-        "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
+        "    model_name = \"unsloth/Llama-3.2-1B-Instruct\",\n",
         "    max_seq_length = max_seq_length,\n",
         "    dtype = dtype,\n",
         "    load_in_4bit = load_in_4bit,\n",
@@ -164,7 +164,7 @@
         "from datasets import Dataset\n",
         "\n",
         "# CSV dosyasının yolu\n",
-        "csv_path = \"/content/generated_dataset_10000_rows.xlsx\"\n",
+        "csv_path = \"/content/deneme.xlsx\"\n",
         "\n",
         "# Pandas ile Excel dosyasını yükleyin\n",
         "df = pd.read_excel(csv_path, engine='openpyxl') # Use read_excel for .xlsx files\n",
@@ -247,6 +247,7 @@
         "    dataset_num_proc = 2,\n",
         "    packing = False, # Can make training 5x faster for short sequences.\n",
         "    args = TrainingArguments(\n",
+        "        report_to=\"none\",\n",
         "        per_device_train_batch_size = 2,\n",
         "        gradient_accumulation_steps = 4,\n",
         "        warmup_steps = 5,\n",
@@ -450,10 +451,10 @@
       },
       "outputs": [],
       "source": [
-        "model.save_pretrained(\"lora_model\") # Local saving\n",
-        "tokenizer.save_pretrained(\"lora_model\")\n",
-        "# model.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving\n",
-        "# tokenizer.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving"
+        "#model.save_pretrained(\"lora_model\") # Local saving\n",
+        "#tokenizer.save_pretrained(\"lora_model\")\n",
+        "model.push_to_hub(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\", token = \"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\") # Online saving\n",
+        "tokenizer.push_to_hub(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\", token = \"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\") # Online saving"
       ]
     },
     {
@@ -512,20 +513,93 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yFfaXG0WsQuE"
+        "id": "yFfaXG0WsQuE",
+        "collapsed": true
       },
       "outputs": [],
       "source": [
-        "if False:\n",
+        "if True:\n",
         "    # I highly do NOT suggest - use Unsloth if possible\n",
         "    from peft import AutoPeftModelForCausalLM\n",
         "    from transformers import AutoTokenizer\n",
         "    model = AutoPeftModelForCausalLM.from_pretrained(\n",
-        "        \"lora_model\", # YOUR MODEL YOU USED FOR TRAINING\n",
-        "        load_in_4bit = load_in_4bit,\n",
+        "        \"kmk4444/Llama-3.2-1B-Instruct_fine_sis\",  # YOUR MODEL YOU USED FOR TRAINING\n",
+        "        load_in_4bit=load_in_4bit,\n",
         "    )\n",
-        "    tokenizer = AutoTokenizer.from_pretrained(\"lora_model\")"
+        "    tokenizer = AutoTokenizer.from_pretrained(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\")\n",
+        "\n",
+        "SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers. Follow these guidelines:\n",
+        "1. Provide clear, concise, and expert-level information in Turkish.\n",
+        "2. Use the provided documents and historical conversation data to deliver insightful answers. Previous conversation history and document information will be given to you in the user's prompt.\n",
+        "3. Ensure that your answers are free from any repetitive or duplicate content and sentence. You have to eliminate repetitive sentences. DON'T REPEAT THE SAME SENTENCES!\n",
+        "4. If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
+        "5. Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
+        "6. Only respond in TURKISH.\"\"\"\n",
+        "\n",
+        "messages = [{\"role\": \"system\", \"content\": SYS_PROMPT}, {\"role\": \"user\", \"content\": \"Sistem mühendisliği nedir?\"}]\n",
+        "\n",
+        "# input_ids ve attention_mask alınarak giriş hazırlanır\n",
+        "inputs = tokenizer.apply_chat_template(\n",
+        "    messages,\n",
+        "    add_generation_prompt=True,\n",
+        "    return_tensors=\"pt\",\n",
+        "    padding=True\n",
+        ").to(model.device)\n",
+        "\n",
+        "# Attention mask ve pad_token_id'yi belirleyin\n",
+        "outputs = model.generate(\n",
+        "    inputs['input_ids'],\n",
+        "    attention_mask=inputs['attention_mask'],\n",
+        "    max_new_tokens=1024,\n",
+        "    eos_token_id=tokenizer.eos_token_id,\n",
+        "    pad_token_id=tokenizer.eos_token_id,  # Pad token olarak EOS token kullanılıyor\n",
+        "    do_sample=True,\n",
+        "    temperature=0.85,\n",
+        "    top_p=0.90,\n",
+        "    repetition_penalty=1.2,\n",
+        ")\n",
+        "\n",
+        "response = outputs[0][inputs['input_ids'].shape[-1]:]\n",
+        "print(tokenizer.decode(response, skip_special_tokens=True))\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers. Follow these guidelines:\n",
+        "1. Provide clear, concise, and expert-level information in Turkish.\n",
+        "2. Use the provided documents and historical conversation data to deliver insightful answers. Previous conversation history and document information will be given to you in the user's prompt.\n",
+        "3. Ensure that your answers are free from any repetitive or duplicate content and sentence. You have to eliminate repetitive sentences. DON'T REPEAT THE SAME SENTENCES!\n",
+        "4. If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
+        "5. Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
+        "6. Only respond in TURKISH.\"\"\"\n",
+        "\n",
+        "messages = [{\"role\": \"system\", \"content\": SYS_PROMPT}, {\"role\": \"user\", \"content\": \"Sistem mühendisliği nedir?\"}]\n",
+        "\n",
+        "input_ids = tokenizer.apply_chat_template(\n",
+        "    messages,\n",
+        "    add_generation_prompt=True,\n",
+        "    return_tensors=\"pt\"\n",
+        ").to(model.device)\n",
+        "\n",
+        "outputs = model.generate(\n",
+        "    input_ids,\n",
+        "    max_new_tokens=1024,\n",
+        "    eos_token_id=tokenizer.eos_token_id,\n",
+        "    do_sample=True,\n",
+        "    temperature=0.85,\n",
+        "    top_p=0.90,\n",
+        "    repetition_penalty=1.2,\n",
+        ")\n",
+        "\n",
+        "response = outputs[0][input_ids.shape[-1]:]\n",
+        "print(tokenizer.decode(response, skip_special_tokens=True))"
+      ],
+      "metadata": {
+        "id": "UI_2zV_fwhG5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -660,7 +734,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "A100",
+      "gpuType": "T4",
       "provenance": [],
       "include_colab_link": true
     },
