--- a/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
+++ b/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "2eSvM9zX_2d3"
       },
@@ -511,22 +511,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "yFfaXG0WsQuE",
-        "collapsed": true
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "b3e00447-26d0-4701-9875-c7ebb9ac0472"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Unused kwargs: ['_load_in_4bit', '_load_in_8bit', 'quant_method']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bilimsel bir область olan sistem mühendisi, sistemleri design, kurulum ve operasyonlailarara iletimi ve geliştirme processini takip etmede, teknoloji, enerji, komunikasyon gibi sektörlerde aktif olarak yer alar. Sistem mühendislerinin deurden alan her Bereichde problem-solving skillsi, bilgisayarlı simulationlar, modellerleme, sistematik analizler vb. teknikler kullanmaktedir.\n"
+          ]
+        }
+      ],
       "source": [
-        "if True:\n",
-        "    # I highly do NOT suggest - use Unsloth if possible\n",
-        "    from peft import AutoPeftModelForCausalLM\n",
-        "    from transformers import AutoTokenizer\n",
-        "    model = AutoPeftModelForCausalLM.from_pretrained(\n",
-        "        \"kmk4444/Llama-3.2-1B-Instruct_fine_sis\",  # YOUR MODEL YOU USED FOR TRAINING\n",
-        "        load_in_4bit=load_in_4bit,\n",
-        "    )\n",
-        "    tokenizer = AutoTokenizer.from_pretrained(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\")\n",
+        "from peft import AutoPeftModelForCausalLM\n",
+        "from transformers import AutoTokenizer\n",
+        "\n",
+        "# 4-bit quantization için gerekli konfigürasyon\n",
+        "load_in_4bit = False\n",
+        "\n",
+        "model = AutoPeftModelForCausalLM.from_pretrained(\n",
+        "    \"kmk4444/Llama-3.2-1B-Instruct_fine_sis\",\n",
+        "    load_in_4bit=load_in_4bit,\n",
+        "    device_map=\"auto\"\n",
+        ")\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\")\n",
         "\n",
         "SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers. Follow these guidelines:\n",
         "1. Provide clear, concise, and expert-level information in Turkish.\n",
@@ -536,31 +559,40 @@
         "5. Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
         "6. Only respond in TURKISH.\"\"\"\n",
         "\n",
-        "messages = [{\"role\": \"system\", \"content\": SYS_PROMPT}, {\"role\": \"user\", \"content\": \"Sistem mühendisliği nedir?\"}]\n",
+        "messages = [\n",
+        "    {\"role\": \"system\", \"content\": SYS_PROMPT},\n",
+        "    {\"role\": \"user\", \"content\": \"Sistem mühendisliği nedir?\"}\n",
+        "]\n",
         "\n",
         "# input_ids ve attention_mask alınarak giriş hazırlanır\n",
-        "inputs = tokenizer.apply_chat_template(\n",
+        "encoded_input = tokenizer.apply_chat_template(\n",
         "    messages,\n",
         "    add_generation_prompt=True,\n",
-        "    return_tensors=\"pt\",\n",
-        "    padding=True\n",
-        ").to(model.device)\n",
+        "    return_tensors=\"pt\"\n",
+        ")\n",
         "\n",
-        "# Attention mask ve pad_token_id'yi belirleyin\n",
+        "# GPU'ya taşıma işlemi\n",
+        "encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()} if isinstance(encoded_input, dict) else encoded_input.to(model.device)\n",
+        "\n",
+        "# Model çıktısı üretilir\n",
         "outputs = model.generate(\n",
-        "    inputs['input_ids'],\n",
-        "    attention_mask=inputs['attention_mask'],\n",
+        "    input_ids=encoded_input if not isinstance(encoded_input, dict) else encoded_input['input_ids'],\n",
         "    max_new_tokens=1024,\n",
-        "    eos_token_id=tokenizer.eos_token_id,\n",
-        "    pad_token_id=tokenizer.eos_token_id,  # Pad token olarak EOS token kullanılıyor\n",
         "    do_sample=True,\n",
         "    temperature=0.85,\n",
         "    top_p=0.90,\n",
         "    repetition_penalty=1.2,\n",
+        "    pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
         ")\n",
         "\n",
-        "response = outputs[0][inputs['input_ids'].shape[-1]:]\n",
-        "print(tokenizer.decode(response, skip_special_tokens=True))\n"
+        "# Yanıtı decode etme\n",
+        "if isinstance(encoded_input, dict):\n",
+        "    input_length = encoded_input['input_ids'].shape[1]\n",
+        "else:\n",
+        "    input_length = encoded_input.shape[1]\n",
+        "\n",
+        "response = outputs[0][input_length:]\n",
+        "print(tokenizer.decode(response, skip_special_tokens=True))"
       ]
     },
     {
