--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0d2iJ4ti4RWFj5t6r+ePU",
+      "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Fine_tuning.ipynb",
+      "authorship_tag": "ABX9TyOGmxCsWfLuwjqbxyvY+2Qg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,25 +338,10 @@
         "len(soru_kaliplari)"
       ],
       "metadata": {
-        "id": "OQAL6Mh2im3v",
-        "outputId": "bf01f1cd-2da6-49f8-c3de-dadceb55ebdf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "OQAL6Mh2im3v"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "214"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -372,23 +358,10 @@
         "!pip install openpyxl"
       ],
       "metadata": {
-        "id": "dIQRFrUVgpuJ",
-        "outputId": "ca977f6d-7f75-472a-e8c7-a77e78da8d69",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dIQRFrUVgpuJ"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: openpyxl in /usr/local/lib/python3.10/dist-packages (3.1.5)\n",
-            "Requirement already satisfied: et-xmlfile in /usr/local/lib/python3.10/dist-packages (from openpyxl) (1.1.0)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -425,14 +398,14 @@
         "        return text  # Hata durumunda orijinal metni döndür\n",
         "\n",
         "# Excel dosyasını yükleyin\n",
-        "df = pd.read_excel('/content/deneme.xlsx', engine='openpyxl')\n",
+        "df = pd.read_excel('/content/drive/MyDrive/Fine-tune/General_Dataset.xlsx', engine='openpyxl')\n",
         "\n",
         "# Dosyada en az 1000 satır olduğundan emin olun\n",
         "if len(df) < 1000:\n",
         "    print(\"Dosyada en az 1000 satır bulunmalıdır.\")\n",
         "else:\n",
         "    # İlk 1000 satır içerisinden rastgele 400 farklı satır seçin\n",
-        "    random_rows = df.iloc[0:1000].sample(n=500, random_state=42, replace=False)\n",
+        "    random_rows = df.iloc[2000:6000].sample(n=2000, random_state=42, replace=False)\n",
         "\n",
         "    # 'instruction', 'input' ve 'output' sütunlarını çevirin\n",
         "    for column in ['instruction', 'input', 'output']:\n",
@@ -445,22 +418,10 @@
         "    print(\"Çeviri işlemi tamamlandı ve yeni dosya kaydedildi.\")\n"
       ],
       "metadata": {
-        "id": "Lu_j__n9fgNj",
-        "outputId": "2da8ee22-9e60-4ade-9cf6-6a0ad67b9058",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Lu_j__n9fgNj"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Çeviri işlemi tamamlandı ve yeni dosya kaydedildi.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
