--- a/system_engineering_v8.ipynb
+++ b/system_engineering_v8.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_engineering_v8.ipynb",
-      "authorship_tag": "ABX9TyNYjI37Z7FQIDKga7ei3LZI",
+      "authorship_tag": "ABX9TyMfHW7NHrDTORoX9H1/ls1G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,18 +141,25 @@
         "colbert_tokenizer, colbert_model = initialize_colbertv2_model()\n",
         "\n",
         "# Modelin başlatılması\n",
-        "def initialize_model():\n",
-        "    model_id = \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\"\n",
+        "from peft import AutoPeftModelForCausalLM\n",
+        "from transformers import AutoTokenizer\n",
         "\n",
-        "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-        "    model = AutoModelForCausalLM.from_pretrained(\n",
-        "        model_id,\n",
-        "        torch_dtype=torch.bfloat16,\n",
+        "def initialize_model():\n",
+        "    # 4-bit quantization için gerekli konfigürasyon\n",
+        "    load_in_4bit = False\n",
+        "\n",
+        "    model = AutoPeftModelForCausalLM.from_pretrained(\n",
+        "        \"kmk4444/Llama-3.2-1B-Instruct_fine_sis\",\n",
+        "        load_in_4bit=load_in_4bit,\n",
         "        device_map=\"auto\"\n",
         "    )\n",
+        "\n",
+        "    tokenizer = AutoTokenizer.from_pretrained(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\")\n",
         "    return tokenizer, model\n",
         "\n",
-        "tokenizer, model = initialize_model()\n"
+        "# Modeli ve tokenizer'ı başlat\n",
+        "tokenizer, model = initialize_model()\n",
+        "\n"
       ]
     },
     {
@@ -341,7 +348,7 @@
         "    system_message = templates[\"system_multiple\"]\n",
         "    system_message += '\\n' + templates[\"lang_eng\"]\n",
         "\n",
-        "    skills = [\"deeper_understanding\",\"task_decomposition\",\"fewshot_prompting\"]\n",
+        "    skills = [\"deeper_understanding\", \"task_decomposition\", \"fewshot_prompting\"]\n",
         "    integrated_templates = \"[Prompt Engineering Techniques to Apply]\\n\"\n",
         "\n",
         "    for idx, skill in enumerate(skills):\n",
@@ -352,25 +359,40 @@
         "    prompt_template = PromptTemplate.from_template(integrated_templates)\n",
         "    formatted_input = prompt_template.format(prompt=prompt)\n",
         "\n",
-        "    messages = [{\"role\": \"system\", \"content\": system_message}, {\"role\": \"user\", \"content\": formatted_input}]\n",
+        "    messages = [\n",
+        "        {\"role\": \"system\", \"content\": system_message},\n",
+        "        {\"role\": \"user\", \"content\": formatted_input}\n",
+        "    ]\n",
         "\n",
-        "    input_ids = tokenizer.apply_chat_template(\n",
+        "    # input_ids ve attention_mask alınarak giriş hazırlanır\n",
+        "    encoded_input = tokenizer.apply_chat_template(\n",
         "        messages,\n",
         "        add_generation_prompt=True,\n",
         "        return_tensors=\"pt\"\n",
-        "    ).to(model.device)\n",
+        "    )\n",
         "\n",
+        "    # GPU'ya taşıma işlemi\n",
+        "    encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()} \\\n",
+        "        if isinstance(encoded_input, dict) else encoded_input.to(model.device)\n",
+        "\n",
+        "    # Model çıktısı üretilir\n",
         "    outputs = model.generate(\n",
-        "        input_ids,\n",
+        "        input_ids=encoded_input if not isinstance(encoded_input, dict) else encoded_input['input_ids'],\n",
         "        max_new_tokens=1024,\n",
-        "        eos_token_id=tokenizer.eos_token_id,\n",
         "        do_sample=True,\n",
         "        temperature=0.70,\n",
         "        top_p=0.90,\n",
         "        repetition_penalty=1.2,\n",
+        "        pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
         "    )\n",
         "\n",
-        "    response = outputs[0][input_ids.shape[-1]:]\n",
+        "    # Yanıtı decode etme\n",
+        "    if isinstance(encoded_input, dict):\n",
+        "        input_length = encoded_input['input_ids'].shape[1]\n",
+        "    else:\n",
+        "        input_length = encoded_input.shape[1]\n",
+        "\n",
+        "    response = outputs[0][input_length:]\n",
         "    return tokenizer.decode(response, skip_special_tokens=True)\n",
         "\n",
         "# LLaMA3 yanıtının üretilmesi\n",
@@ -378,31 +400,47 @@
         "    SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers. Follow these guidelines:\n",
         "1. Provide clear, concise, and expert-level information in Turkish.\n",
         "2. Use the provided documents and historical conversation data to deliver insightful answers. Previous conversation history and document information will be given to you in the user's prompt.\n",
-        "3. Ensure that your answers are free from any repetitive or duplicate content and sentence. You have to eliminate repetitive sentences. DON'T REPEAT THE SAME SENTENCES!\n",
+        "3. Ensure that your answers are free from any repetitive or duplicate content and sentences. You have to eliminate repetitive sentences. DON'T REPEAT THE SAME SENTENCES!\n",
         "4. If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
         "5. Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
         "6. Only respond in TURKISH.\"\"\"\n",
         "\n",
-        "    messages = [{\"role\": \"system\", \"content\": SYS_PROMPT}, {\"role\": \"user\", \"content\": prompt_input}]\n",
+        "    messages = [\n",
+        "        {\"role\": \"system\", \"content\": SYS_PROMPT},\n",
+        "        {\"role\": \"user\", \"content\": prompt_input}\n",
+        "    ]\n",
         "\n",
-        "    input_ids = tokenizer.apply_chat_template(\n",
+        "    # input_ids ve attention_mask alınarak giriş hazırlanır\n",
+        "    encoded_input = tokenizer.apply_chat_template(\n",
         "        messages,\n",
         "        add_generation_prompt=True,\n",
         "        return_tensors=\"pt\"\n",
-        "    ).to(model.device)\n",
+        "    )\n",
         "\n",
+        "    # GPU'ya taşıma işlemi\n",
+        "    encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()} \\\n",
+        "        if isinstance(encoded_input, dict) else encoded_input.to(model.device)\n",
+        "\n",
+        "    # Model çıktısı üretilir\n",
         "    outputs = model.generate(\n",
-        "        input_ids,\n",
+        "        input_ids=encoded_input if not isinstance(encoded_input, dict) else encoded_input['input_ids'],\n",
         "        max_new_tokens=1024,\n",
-        "        eos_token_id=tokenizer.eos_token_id,\n",
         "        do_sample=True,\n",
         "        temperature=0.85,\n",
         "        top_p=0.90,\n",
         "        repetition_penalty=1.2,\n",
+        "        pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
         "    )\n",
         "\n",
-        "    response = outputs[0][input_ids.shape[-1]:]\n",
-        "    return tokenizer.decode(response, skip_special_tokens=True)\n"
+        "    # Yanıtı decode etme\n",
+        "    if isinstance(encoded_input, dict):\n",
+        "        input_length = encoded_input['input_ids'].shape[1]\n",
+        "    else:\n",
+        "        input_length = encoded_input.shape[1]\n",
+        "\n",
+        "    response = outputs[0][input_length:]\n",
+        "    return tokenizer.decode(response, skip_special_tokens=True)\n",
+        "\n"
       ],
       "metadata": {
         "id": "uC9NIW8q_ZDh"
@@ -423,6 +461,7 @@
       "cell_type": "code",
       "source": [
         "def main():\n",
+        "\n",
         "    # Sohbet geçmişini başlat\n",
         "    chat_history = []\n",
         "\n",
