--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Fine_tuning.ipynb",
-      "authorship_tag": "ABX9TyOGmxCsWfLuwjqbxyvY+2Qg",
+      "authorship_tag": "ABX9TyM/KW8NzAGJyZPQaOHvNAR9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,37 @@
         "!pip install openai"
       ],
       "metadata": {
-        "id": "sS1jLlO24N21"
+        "id": "sS1jLlO24N21",
+        "outputId": "06eafee7-dd5c-4923-d800-c4bbb1c33ac1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.52.2)\n",
+            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
+            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from openai) (1.9.0)\n",
+            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.27.2)\n",
+            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.6.1)\n",
+            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
+            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.5)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
+            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
+            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.6)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -358,10 +385,23 @@
         "!pip install openpyxl"
       ],
       "metadata": {
-        "id": "dIQRFrUVgpuJ"
+        "id": "dIQRFrUVgpuJ",
+        "outputId": "75de5f0e-4ed8-494f-f211-f33c4e7b8997",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: openpyxl in /usr/local/lib/python3.10/dist-packages (3.1.5)\n",
+            "Requirement already satisfied: et-xmlfile in /usr/local/lib/python3.10/dist-packages (from openpyxl) (2.0.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -405,7 +445,7 @@
         "    print(\"Dosyada en az 1000 satır bulunmalıdır.\")\n",
         "else:\n",
         "    # İlk 1000 satır içerisinden rastgele 400 farklı satır seçin\n",
-        "    random_rows = df.iloc[2000:6000].sample(n=2000, random_state=42, replace=False)\n",
+        "    random_rows = df.iloc[10000:12000].sample(n=1000, random_state=42, replace=False)\n",
         "\n",
         "    # 'instruction', 'input' ve 'output' sütunlarını çevirin\n",
         "    for column in ['instruction', 'input', 'output']:\n",
@@ -418,10 +458,22 @@
         "    print(\"Çeviri işlemi tamamlandı ve yeni dosya kaydedildi.\")\n"
       ],
       "metadata": {
-        "id": "Lu_j__n9fgNj"
+        "id": "Lu_j__n9fgNj",
+        "outputId": "eaca1e74-44b8-480f-ce68-dbac7a9132ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Çeviri işlemi tamamlandı ve yeni dosya kaydedildi.\n"
+          ]
+        }
+      ]
     }
   ]
 }
