--- a/system_engineering_v8.ipynb
+++ b/system_engineering_v8.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_engineering_v8.ipynb",
-      "authorship_tag": "ABX9TyMfHW7NHrDTORoX9H1/ls1G",
+      "authorship_tag": "ABX9TyMhiP91KsbIhAxtFR7E+NC/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -440,7 +440,119 @@
         "\n",
         "    response = outputs[0][input_length:]\n",
         "    return tokenizer.decode(response, skip_special_tokens=True)\n",
-        "\n"
+        "\n",
+        "def evaluate_answer_relevance(question, answer, tokenizer, model):\n",
+        "    \"\"\"\n",
+        "    Dil modelini kullanarak cevabın soruya uygun olup olmadığını değerlendirir.\n",
+        "    \"\"\"\n",
+        "    evaluation_prompt = f\"Soru: {question}\\nCevap: {answer}\\nBu cevap soruyu doğru ve tam olarak yanıtlıyor mu? Lütfen 'Evet' veya 'Hayır' şeklinde cevap ver.\"\n",
+        "\n",
+        "    messages = [\n",
+        "        {\"role\": \"user\", \"content\": evaluation_prompt}\n",
+        "    ]\n",
+        "\n",
+        "    # input_ids ve attention_mask alınarak giriş hazırlanır\n",
+        "    encoded_input = tokenizer.apply_chat_template(\n",
+        "        messages,\n",
+        "        add_generation_prompt=True,\n",
+        "        return_tensors=\"pt\"\n",
+        "    )\n",
+        "\n",
+        "    # GPU'ya taşıma işlemi\n",
+        "    encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()} \\\n",
+        "        if isinstance(encoded_input, dict) else encoded_input.to(model.device)\n",
+        "\n",
+        "    # Model çıktısı üretilir\n",
+        "    outputs = model.generate(\n",
+        "        input_ids=encoded_input if not isinstance(encoded_input, dict) else encoded_input['input_ids'],\n",
+        "        max_new_tokens=50,\n",
+        "        do_sample=False,\n",
+        "        temperature=0.0,\n",
+        "        top_p=0.0,\n",
+        "        repetition_penalty=1.0,\n",
+        "        pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
+        "    )\n",
+        "\n",
+        "    # Yanıtı decode etme\n",
+        "    if isinstance(encoded_input, dict):\n",
+        "        input_length = encoded_input['input_ids'].shape[1]\n",
+        "    else:\n",
+        "        input_length = encoded_input.shape[1]\n",
+        "\n",
+        "    evaluation_response = outputs[0][input_length:]\n",
+        "    evaluation_text = tokenizer.decode(evaluation_response, skip_special_tokens=True).strip()\n",
+        "\n",
+        "    # Cevabı değerlendirme\n",
+        "    if \"Evet\" in evaluation_text:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "\n",
+        "\n",
+        "def select_best_response(question, responses, tokenizer, model):\n",
+        "    \"\"\"\n",
+        "    Dil modelini kullanarak verilen cevaplar arasından en iyi olanı seçer.\n",
+        "\n",
+        "    Args:\n",
+        "        question (str): Kullanıcının sorusu.\n",
+        "        responses (list): Cevapların listesi.\n",
+        "        tokenizer: Tokenizer nesnesi.\n",
+        "        model: Dil modeli nesnesi.\n",
+        "\n",
+        "    Returns:\n",
+        "        str: En iyi cevap.\n",
+        "    \"\"\"\n",
+        "    # Cevapları numaralandır\n",
+        "    numbered_responses = \"\\n\".join([f\"{idx+1}. {resp}\" for idx, resp in enumerate(responses)])\n",
+        "\n",
+        "    selection_prompt = f\"Kullanıcının sorusu: {question}\\n\\nVerilen cevaplar:\\n{numbered_responses}\\n\\nBu cevaplar arasından soruya en iyi yanıt veren hangisidir? Lütfen sadece cevabın numarasını yaz.\"\n",
+        "\n",
+        "    messages = [\n",
+        "        {\"role\": \"user\", \"content\": selection_prompt}\n",
+        "    ]\n",
+        "\n",
+        "    # input_ids ve attention_mask alınarak giriş hazırlanır\n",
+        "    encoded_input = tokenizer.apply_chat_template(\n",
+        "        messages,\n",
+        "        add_generation_prompt=True,\n",
+        "        return_tensors=\"pt\"\n",
+        "    )\n",
+        "\n",
+        "    # GPU'ya taşıma işlemi\n",
+        "    encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()} \\\n",
+        "        if isinstance(encoded_input, dict) else encoded_input.to(model.device)\n",
+        "\n",
+        "    # Model çıktısı üretilir\n",
+        "    outputs = model.generate(\n",
+        "        input_ids=encoded_input if not isinstance(encoded_input, dict) else encoded_input['input_ids'],\n",
+        "        max_new_tokens=10,\n",
+        "        do_sample=False,\n",
+        "        temperature=0.0,\n",
+        "        top_p=0.0,\n",
+        "        repetition_penalty=1.0,\n",
+        "        pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
+        "    )\n",
+        "\n",
+        "    # Yanıtı decode etme\n",
+        "    if isinstance(encoded_input, dict):\n",
+        "        input_length = encoded_input['input_ids'].shape[1]\n",
+        "    else:\n",
+        "        input_length = encoded_input.shape[1]\n",
+        "\n",
+        "    selection_response = outputs[0][input_length:]\n",
+        "    selection_text = tokenizer.decode(selection_response, skip_special_tokens=True).strip()\n",
+        "\n",
+        "    # Seçilen numarayı al\n",
+        "    try:\n",
+        "        selected_index = int(selection_text.split('.')[0].strip()) - 1\n",
+        "        if 0 <= selected_index < len(responses):\n",
+        "            return responses[selected_index]\n",
+        "        else:\n",
+        "            # Geçersiz seçim durumunda ilk cevabı döndür\n",
+        "            return responses[0]\n",
+        "    except ValueError:\n",
+        "        # Anlaşılamayan yanıt durumunda ilk cevabı döndür\n",
+        "        return responses[0]\n"
       ],
       "metadata": {
         "id": "uC9NIW8q_ZDh"
@@ -461,6 +573,8 @@
       "cell_type": "code",
       "source": [
         "def main():\n",
+        "    # Modeli ve tokenizer'ı başlat\n",
+        "    #tokenizer, model = initialize_model()\n",
         "\n",
         "    # Sohbet geçmişini başlat\n",
         "    chat_history = []\n",
@@ -502,12 +616,42 @@
         "    for doc in chroma_relevant_documents:\n",
         "        print(f\"ID: {doc.metadata['doc_id']} || {doc.page_content}\\n\")\n",
         "\n",
-        "    # LLaMA3'ten yanıtı üret\n",
-        "    response = generate_llama3_response(final_prompt, tokenizer, model)\n",
+        "    max_attempts = 3  # Maksimum deneme sayısı\n",
+        "    attempts = 0\n",
+        "    is_relevant = False\n",
+        "    previous_responses = []  # Önceki cevapları tutmak için liste\n",
+        "\n",
+        "    while attempts < max_attempts and not is_relevant:\n",
+        "        # Yanıtı üret\n",
+        "        if attempts == 0:\n",
+        "            response = generate_llama3_response(final_prompt, tokenizer, model)\n",
+        "        else:\n",
+        "            # Geri bildirimle yeni prompt oluştur\n",
+        "            feedback = f\"Cevabın kullanıcının sorusuna tam olarak yanıt vermedi. Önceki cevabın: '{previous_responses[-1]}'. Lütfen kullanıcının sorusuna odaklanarak daha uygun bir cevap ver.\"\n",
+        "            final_prompt_with_feedback = f\"{feedback}\\n\\n{final_prompt}\"\n",
+        "            response = generate_llama3_response(final_prompt_with_feedback, tokenizer, model)\n",
+        "\n",
+        "        # Cevabın uygunluğunu kontrol et\n",
+        "        is_relevant = evaluate_answer_relevance(prompt, response, tokenizer, model)\n",
+        "\n",
+        "        # Önceki cevapları listeye ekle\n",
+        "        previous_responses.append(response)\n",
+        "        attempts += 1\n",
+        "\n",
+        "    if not is_relevant:\n",
+        "        # Üç cevap arasından en iyisini seç\n",
+        "        best_response = select_best_response(prompt, previous_responses, tokenizer, model)\n",
+        "        response = best_response\n",
+        "\n",
+        "    # Uygun cevap sohbet geçmişine eklenir\n",
+        "    chat_history.append({\"role\": \"assistant\", \"content\": response})\n",
+        "\n",
         "    print(\"\\n\" + \"=\"*50)\n",
         "    print(\"ASİSTAN YANITI:\")\n",
         "    print(\"=\"*50)\n",
         "    print(response)\n",
+        "\n",
+        "\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
